dodam generiranje testa

--- a/views/adminNaloge.pug
+++ b/views/adminNaloge.pug
@@ -13,7 +13,7 @@ html(ng-app="app")
                 th pike
                 th vrsta
             tr(ng-repeat="nal in naloge")
-                td {{nal.idnaloge}}
-                td {{nal.navodila}}
-                td {{nal.pike}}
-                td {{nal.tipNaloge}}
+                td= {{nal.idnaloge}}
+                td= {{nal.navodila}}
+                td= {{nal.pike}}
+                td= {{nal.tipNaloge}}
